--- a/index.html
+++ b/index.html
@@ -1809,8 +1809,9 @@
 
         </div>
     </div>
-    <script src="scripts/controller/calcController.js"></script>
-    <script> src="scripts/Calculator.js"</script>
+    <script src="scripts/controller/calcController.js"></script> 
+    <script src="scripts/Calculator.js"></script>
+   
 </body>
 
 </html>
